<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hirshagarwal.songle.MainActivity">

    <ImageView android:id="@+id/backgroundImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/background_map_compressed"
        android:scaleType="centerCrop"
        android:alpha="0.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16pt"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/backgroundImageView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/backgroundImageView"
        app:layout_constraintTop_toTopOf="@+id/backgroundImageView"
        android:layout_marginTop="100dp"
        app:layout_constraintHorizontal_bias="0.507"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    
    <View android:id="@+id/logo_divider"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    
    <ImageView android:id="@+id/logo_button"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/songle_logo_shadow"
        app:layout_constraintTop_toTopOf="@+id/logo_divider"
        app:layout_constraintLeft_toLeftOf="@+id/backgroundImageView"
        app:layout_constraintRight_toRightOf="@+id/backgroundImageView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/start_game_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-thin"
        android:onClick="gameStart"
        android:text="Press to start"
        android:textColor="@color/colorSecondaryText"
        android:textSize="8pt"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/backgroundImageView"
        app:layout_constraintRight_toRightOf="@+id/backgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/logo_button" />

    <TextView
        android:id="@+id/designed_in_edinburgh_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="Designed in Edinburgh"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView android:id="@+id/main_page_settings_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/settings_icon_shadow"
        android:onClick="settingsStart"
        app:layout_constraintBottom_toTopOf="@id/designed_in_edinburgh_text"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="110dp"/>

    <ImageView android:id="@+id/main_page_leaderboard_icon"
        android:onClick="leaderboardStart"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/leaderboard_icon_shadow"
        app:layout_constraintBottom_toTopOf="@id/designed_in_edinburgh_text"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="110dp"/>





</android.support.constraint.ConstraintLayout>
