...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hirshagarwal.songle.ScoresActivity">

    <android.support.constraint.ConstraintLayout android:id="@+id/topInformation"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="125dp">

        <TextView android:id="@+id/gamesPlayed"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        />


    <ImageView android:id="@+id/scores_home_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/home_icon_shadow"
        android:onClick="returnHome"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
