<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_map"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        tools:context="com.example.hirshagarwal.songle.GameMapActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.hirshagarwal.songle.GameMapActivity"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintLeft_toLeftOf="parent" />

    <include layout="@layout/content_bottom_sheet_game_map"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/guess_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/lightbulb_icon_white"
        app:layout_anchor="@+id/content_bottom_sheet_game_map"
        app:layout_anchorGravity="top|end"/>

</android.support.design.widget.CoordinatorLayout>
