...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hirshagarwal.songle.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
...
